--- a/aboutme.html
+++ b/aboutme.html
@@ -10,13 +10,13 @@
 <body>
     
 	<div id="wrapper1">
-	<header><h1>Here is my  all about information </h1></header>
+	<header><h1>Here is my  all information </h1></header>
 	   <div id="name">
 	       <h3><mark>Name:</mark>Md.Maidul Islam</h3></br>
 		   <h3><mark>Father's name:</mark>Md Zahirul islam</h3></br>
 		   <h3><mark>Mother's name:</mark>Manik Jun Begum</h3></br>
 	       <h3><mark>Religion:</mark>Muslim</h3></br>
-	       <h3><mark>Nationality:</mark>Bengali</h3>
+	       <h3><mark>Nationality:</mark>Bangladeshi</h3>
 		</div>
 		 <div id="address"></br>
 		    <h3><mark>House no:</mark> 57/a,</h3></br>
@@ -31,7 +31,7 @@
 		   <h2>Education</h2>
 		   <h3>Primary Education: Chapulia Model Government Primary School</h3></br>
 		   <h3>Secondary Education: Mofiz Uddin Khan High School</h3></br>
-		   <h3>Higher Secondaary Education: Gazipur Cantonment Collage</h3></br>
+		   <h3>Higher Secondary Education: Gazipur Cantonment Collage</h3></br>
 		   <h3>Higher Education:Studying B.S.C in Environmental Science And Disaster Management At Noakhali Science And Technology University</h3></br>
 		
 		</div>
