--- a/aboutme.html
+++ b/aboutme.html
@@ -10,7 +10,7 @@
 <body>
     
 	<div id="wrapper1">
-	<header><h1>Here is my  all information </h1></header>
+	<header><h1>Here is my  all Information </h1></header>
 	   <div id="name">
 	       <h3><mark>Name:</mark>Md.Maidul Islam</h3></br>
 		   <h3><mark>Father's name:</mark>Md Zahirul islam</h3></br>
