--- a/hire.html
+++ b/hire.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 	<div id="hire">
-	    <h1>Dear Sir,to build amy website for your own purpose,for your organization or your institutions you car hire me.
+	    <h1>Dear Sir,to build any website for your own purpose,for your organization or your institutions you can hire me.
 		I will give you the best service within a reasonable payment.Please contact with me.
 		</h1>
 		 <h2>Thank You</h2>
