--- a/contact.html
+++ b/contact.html
@@ -13,7 +13,7 @@
 	   <h2>Email: islam_midul@Yahoo.com</h2>
 	   <h2>Cell phone number: +8801835557524</h2>
 	   <h2><a href="https://www.facebook.com/mdmidul.islam.758"target="blank"/>Click &#8594; "Md Maidul Islam" for Facebook </a></h2>
-	   <h2><a href="https://www.instagram.com/_the_captain_001/"target="blank">Click &#8594;"_the_captain_oo1" for Instagram</a></h2>
+	   <h2><a href="https://www.instagram.com/_the_captain_001"target="blank"/>Click &#8594;"_the_captain_oo1" for Instagram</a></h2>
 	</div>
 </body>
 </html>
