--- a/pictures.html
+++ b/pictures.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="themes/bar/bar.css" type="text/css" media="screen" />
     <link rel="stylesheet" href="nivo-slider.css" type="text/css" media="screen" />
 
-	<link rel="icon" href="img/h.jpg" />
+	<link rel="icon" href="img/k.jpg" />
 	<link rel="shortcut icon" href="img/a.ico" />
 </head>
 <body>
