--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	 <div id="wrapper">
 	   <header>
 	      <div id="header">
-		       <img src="img/c.jpg" alt="" />
+		       <img src="img/h.jpg" alt="" />
 			   <h1>Hey There, I'm Maidul Islam</h1>
 			   <h2>A Student, a Website Designer and Developer</h2>
 		  </div>
